--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
-{% block title %}Registra't{% endblock %}
-{% block page_content %}
+{% extends "partials/auth_layout.html" %}
+
+{% block title %}Login{% endblock %}
+
+{% block content %}
 <h2>Registra't</h2>
 <form method="POST">
     <label for="email">Email:</label>
