--- a/templates/assignatures/llista.html
+++ b/templates/assignatures/llista.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 <h2>Llista d'Assignatures</h2>
-<a href="{{ url_for('assignatures.add_assignatura') }}" class="btn">Afegir Assignatura</a>
+<a href="{{ url_for('assignatures.add_assignatura_route') }}" class="btn">Afegir Assignatura</a>
+
 <table class="styled-table">
   <thead>
     <tr>
