--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -5,6 +5,12 @@
 {% block content %}
 <h2>Registra't</h2>
 <form method="POST">
+    <label for ="nom">Nom:</label>
+    <input type="text" name="nom" id="nom" required>
+    <br>
+    <label for="cognoms">Cognoms:</label>
+    <input type="text" name="cognoms" id="cognoms" required>
+    <br>
     <label for="email">Email:</label>
     <input type="email" name="email" id="email" required>
     <br>
