--- a/templates/cicles/add.html
+++ b/templates/cicles/add.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h2>Afegir Cicle</h2>
-    <form method="POST" action="{{ url_for('cicles.add_cicle') }}">
+    <form method="POST" action="{{ url_for('cicles.add_cicle_route') }}">
         <div>
             <label for="nom">Nom del Cicle:</label>
             <input type="text" name="nom" id="nom" required>
