--- a/templates/grups/add.html
+++ b/templates/grups/add.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h2>Afegir Grup</h2>
-<form method="POST" action="{{ url_for('grups.add_grup') }}">
+<form method="POST" action="{{ url_for('grups.add_grup_route') }}">
   <div>
     <label for="nom">Nom:</label>
     <input type="text" name="nom" id="nom" required>
