--- a/templates/assignatures/add.html
+++ b/templates/assignatures/add.html
@@ -2,7 +2,7 @@
 {% block title %}Afegir Assignatura{% endblock %}
 {% block content %}
 <h2>Afegir Assignatura</h2>
-<form method="POST" action="{{ url_for('assignatures.add_assignatura') }}">
+<form method="POST" action="{{ url_for('assignatures.add_assignatura_route') }}">
   <div>
     <label for="nom">Nom:</label>
     <input type="text" name="nom" id="nom" required>
