--- a/templates/partials/full_layout.html
+++ b/templates/partials/full_layout.html
@@ -3,8 +3,11 @@
 <nav class="navbar">
     <ul class="nav-list">
         <li><a href="{{ url_for('professors.dashboard') }}">Inici</a></li>
-        <li><a href="#">Notícies</a></li>
-        <li><a href="#">Perfil</a></li>
+        {% if session.teacher_id %}
+        <li><a href="{{ url_for('noticies.llistar_noticies') }}">Notícies</a></li>
+<li><a href="{{ url_for('esdeveniments.llistar_esdeveniments') }}">Esdeveniments</a></li>
+        <li><a href="{{ url_for('professors.perfil') }}">El meu perfil</a></li>
+        {% endif %}
     </ul>
     <ul class="nav-list">
         <li><a href="{{ url_for('auth.logout') }}" class="logout">Sortir</a></li>
@@ -17,9 +20,10 @@
             <h2>Dashboard</h2>
         </div>
         <ul class="sidebar-menu">
-            <!-- Opcions que demanes -->
             <li><a href="{{ url_for('grups.llista_grups') }}">Grups</a></li>
+            {% if session.get("is_admin") %}
             <li><a href="{{ url_for('professors.llista_professors') }}">Professors</a></li>
+            {% endif %}
             <li><a href="{{ url_for('assignatures.llista_assignatures') }}">Mòdul</a></li>
             <li><a href="{{ url_for('cicles.llista_cicles') }}">Cicle Formatiu</a></li>
             <li><a href="{{ url_for('alumnes.llista_alumnes') }}">Alumne</a></li>
