--- a/templates/professors/add_professor.html
+++ b/templates/professors/add_professor.html
@@ -1,8 +1,10 @@
 {% extends "partials/full_layout.html" %}
 {% block title %}Afegir Professor{% endblock %}
+
 {% block content %}
 <h2>Afegir Professor</h2>
-<form method="POST" action="{{ url_for('professors.add_professor') }}">
+
+<form method="POST" action="{{ url_for('professors.add_professor_route') }}">
   <div>
     <label for="nom">Nom:</label>
     <input type="text" name="nom" id="nom" required>
