--- a/templates/professors/dashboard.html
+++ b/templates/professors/dashboard.html
@@ -2,10 +2,8 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
-<!-- Títol general -->
 <h2>Benvingut/da al Sistema de Gestió Educativa</h2>
 
-<!-- SECCIÓ: "Les meves assignatures" (codi original) -->
 <h2>Les meves assignatures</h2>
 
 {% if assignatures %}
@@ -24,8 +22,27 @@
       <tr>
         <td>{{ a.nom }}</td>
         <td>{{ cicles_dict.get(a.cicle_id|string, 'N/D') }}</td>
-        <td>{{ a.grups | join(', ') }}</td>
-        <td>{{ a.curs | join(', ') }}</td>
+        <td>
+          {% set noms_grups = [] %}
+          {% for grup_id in a.grups %}
+            {% set nom = grups_dict[grup_id|string] if grups_dict[grup_id|string] is defined else 'N/D' %}
+            {% set _ = noms_grups.append(nom) %}
+          {% endfor %}
+          {{ noms_grups | join(', ') }}
+        </td>
+        <td>
+          {% if a.curs %}
+            {% if a.curs is iterable and a.curs is not string %}
+              {{ a.curs | join(', ') }}
+            {% else %}
+              {{ a.curs }}
+            {% endif %}
+          {% elif a.any_academic %}
+            {{ a.any_academic }}
+          {% else %}
+            N/D
+          {% endif %}
+        </td>
         <td>
           <a href="{{ url_for('assignatures.edit_assignatura', id=a._id) }}" class="btn-edit">Editar</a>
           <form action="{{ url_for('assignatures.delete_assignatura', id=a._id) }}" method="POST" style="display:inline;">
